<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>mbf_abstract_core</name>
    <version>0.4.0</version>
    <description>
        This package provides common interfaces for navigation specific robot actions. It contains the AbstractPlanner, AbstractController and AbstractRecovery plugin interfaces. This interfaces have to be implemented by the plugins to make the plugin available for Move Base Flex. The abstract classes provides a meaningful interface enabling the planners, controllers and recovery behaviors to return information, e.g. why something went wrong. Derivided interfaces can, for example, provide methods to initialize the planner, controller or recovery with map representations like costmap_2d, grid_map or other representations.
    </description>
    <url>http://wiki.ros.org/mbf_abstract_core</url>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <author email="santos@magazino.eu">Jorge Santos</author>
    <license>BSD-3</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <export>
      <rosdoc config="rosdoc.yaml" />
    </export>
</package>
