<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>mbf_core</name>
    <version>0.1.0</version>
    <description>
        This package provides common interfaces for navigation specific robot actions. It contains the AbstractPlanner,
        AbstractController and AbstractRecovery. The interfaces have to be implemented by the plugins to make the plugin
        available for Move Base Flex. The abstract classes provides a meaningful interface enabling the planners,
        controllers and recovery behaviors to return information, e.g. why something went wrong. The abstract interface
        also allow to implement planners which do not use costmap_2d, e.g., for planning in 3D, as well.

        Furthermore, this package also provides the MoveBasePlanner, MoveBaseController and MoveBaseRecovery interfaces,
        which wraps the interfaces in the nav_core BaseGlobalPlanner, BaseLocalPlanner and RecoveryBehavior to provide
        compatibility for the navigation plugins for move_base, which are based on the nav_core.
    </description>
    <url>http://wiki.ros.org/mbf_core</url>
    <author email="santos@magazino.eu">Jorge Santos</author>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>nav_core</depend>
    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>

</package>
