<package>
    <name>mbf_costmap_nav</name>
    <version>0.1.0</version>
    <description>
        The mbf_costmap_nav package contains the costmap navigation server implementation of Move Base Flex (MBF). The costmap navigation server is bound to the <a href="wiki.ros.org/costmap_2d">costmap_2d</a> representation. It provides the Actions for planning, controlling and recovering. At the time of start MBF loads all defined plugins. Therefor, it loads all plugins which are defined in the lists *planners*, *controllers* and *recovery_behaviors*. Each list holds a pair of a *name* and a *type*. The *type* defines which kind of plugin to load. The *name* defines under which name the plugin should be callable by the actions. 

        Additionally the mbf_costmap_nav package comes with a wrapper for the old navigation stack and the plugins which inherits from the <a href="wiki.ros.org/nav_core">nav_core</a> base classes. Preferably it tries to load plugins for the new API. However, plugins could even support both <a href="wiki.ros.org/move_base">move_base</a> and <a href="wiki.ros.org/move_base_flex">move_base_flex</a> by inheriting both base class interfaces located in the <a href="wiki.ros.org/nav_core">nav_core</a> package and in the <a href="mbf_costmap_core">mbf_costmap_core</a> package.
    </description>
    <url>http://wiki.ros.org/move_base_flex</url>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tf</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>mbf_abstract_nav</build_depend>
    <build_depend>mbf_costmap_core</build_depend>
    <build_depend>mbf_msgs</build_depend>
    <build_depend>mbf_utility</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <run_depend>tf</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>mbf_abstract_nav</run_depend>
    <run_depend>mbf_costmap_core</run_depend>
    <run_depend>mbf_msgs</run_depend>
    <run_depend>mbf_utility</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>

    <!-- Required by the backward compatibility move_base relay -->
    <run_depend>move_base_msgs</run_depend>
    <run_depend>move_base</run_depend>

    <export>
      <rosdoc config="rosdoc.yaml" />
    </export>
</package>
