<package format="2">
    <name>mbf_costmap_nav</name>
    <version>0.4.0</version>
    <description>
        The mbf_costmap_nav package contains the costmap navigation server implementation of Move Base Flex (MBF). The costmap navigation server is bound to the <a href="wiki.ros.org/costmap_2d">costmap_2d</a> representation. It provides the Actions for planning, controlling and recovering. At the time of start MBF loads all defined plugins. Therefor, it loads all plugins which are defined in the lists *planners*, *controllers* and *recovery_behaviors*. Each list holds a pair of a *name* and a *type*. The *type* defines which kind of plugin to load. The *name* defines under which name the plugin should be callable by the actions. 

        Additionally the mbf_costmap_nav package comes with a wrapper for the old navigation stack and the plugins which inherits from the <a href="wiki.ros.org/nav_core">nav_core</a> base classes. Preferably it tries to load plugins for the new API. However, plugins could even support both <a href="wiki.ros.org/move_base">move_base</a> and <a href="wiki.ros.org/move_base_flex">move_base_flex</a> by inheriting both base class interfaces located in the <a href="wiki.ros.org/nav_core">nav_core</a> package and in the <a href="mbf_costmap_core">mbf_costmap_core</a> package.
    </description>
    <url>http://wiki.ros.org/move_base_flex</url>
    <author email="spuetz@uos.de">Sebastian Pütz</author>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>angles</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>mbf_abstract_nav</depend>
    <depend>mbf_costmap_core</depend>
    <depend>mbf_msgs</depend>
    <depend>mbf_utility</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf</depend>

    <!-- Required by the backward compatibility move_base relay -->
    <exec_depend>move_base</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>

    <test_depend>gtest</test_depend>
    <test_depend>map_server</test_depend>

    <export>
      <rosdoc config="rosdoc.yaml" />
    </export>
</package>
