<package>
    <name>mbf_msgs</name>
    <version>0.1.0</version>
    <description>
        The move_base_flex messages package: For the package move_base_flex
	    See <a href="http://wiki.ros.org/move_base_flex">move_base_flex</a>.
    </description>
    <author email="santos@magazino.eu">Jorge Santos</author>
    <author email="spuetz@uni-osnabrueck.de">Sebastian Pütz</author>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>genmsg</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

</package>
