<package>
    <name>mbf_msgs</name>
    <version>0.4.0</version>
    <description>
        The move_base_flex messages package providing the action definition files for the action GetPath, ExePath, Recovery and MoveBase. The action servers providing these action are implemented in <a href="http://wiki.ros.org/mbf_abstract_nav">mbf_abstract_nav</a>.
    </description>
    <author email="santos@magazino.eu">Jorge Santos</author>
    <author email="spuetz@uni-osnabrueck.de">Sebastian Pütz</author>
    <maintainer email="santos@magazino.eu">Jorge Santos</maintainer>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>genmsg</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

</package>
