<?xml version="1.0"?>
<package format="2">
  <name>mbf_utility</name>
  <version>0.4.0</version>
  <description>The mbf_utility package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD-3</license>
  <url type="website">http://wiki.ros.org/move_base_flex/mbf_utility</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mbf_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
